@@ -17,6 +17,7 @@ Version 0.4i
  - Caprinium: Goat
  - Cerventine: Deer
  - Honey brew: Bee
+ - Androgyn: Trappy TF
 * Added some minor scenes for picking up ingredients.
 * Most TF items and ingredients now have more than one source; several mobs has had new items added to their drop tables (low odds).
 
